Make apache serve out of /vagrant. Adds use of Template and File modules.  Also handlers and notify.

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,11 @@
 ---
 - hosts: all
   sudo: true
+  vars:
+    document_root: /vagrant
+  handlers:
+    - name: reload apache
+      service: name=apache2 state=reloaded
   tasks:
     - name: update apt cache
       apt: update-cache=yes cache_valid_time=3600
